Eliminate classi costanti non necessarie.